Add entity UUIDs and required bot IDs
